# simgit

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  TESTING.md  plan
.github/workflows/: ci.yml  fuse-linux-integration.yml  nightly-slo.yml  release.yml  windows-winfsp.yml
assets/: demo-agent  demo.tape
deploy/dev/: Dockerfile  README.md  docker-compose.yml  prometheus.yml
deploy/launchd/: com.simgit.simgitd.plist
deploy/systemd/: simgitd.service
deploy/test-cow-linux/: Dockerfile  docker-compose.yml  run.sh
deploy/test-fuse-linux/: Dockerfile  README.md  docker-compose.yml
docs/: agent_integration.md  known_issues.md  scaling_benchmark.md  track2_chaos_validation.md
packaging/homebrew/: simgit.rb
sg/: Cargo.toml
sg/src/: main.rs
sg/src/commands/: abort.rs  commit.rs  daemon.rs  diff.rs  gc.rs  init.rs  lock.rs  mod.rs  new.rs  peer.rs  session_set_base.rs  status.rs  worktree.rs  worktree_tests.rs
sg/src/commands/worktree/: cow.rs  overlay.rs
sg/tests/: cli_workflow.rs
simgit-py/: Cargo.toml  README.md  pyproject.toml
simgit-py/simgit/: __init__.py
simgit-py/src/: lib.rs
simgit-sdk/: Cargo.toml
simgit-sdk/src/: client.rs  error.rs  lib.rs  types.rs
simgit-ts/: package.json  tsconfig.json
simgit-ts/src/: client.ts  errors.ts  index.ts  types.ts
simgitd/: Cargo.toml
simgitd/src/: commit_scheduler.rs  config.rs  daemon.rs  git_proxy.rs  main.rs  metrics.rs  platform.rs
simgitd/src/borrow/: mod.rs  registry.rs  ttl_sweeper.rs
simgitd/src/delta/: flatten.rs  mod.rs  store.rs
simgitd/src/events/: mod.rs
simgitd/src/rpc/: methods.rs  mod.rs  server.rs
simgitd/src/rpc/methods/: commit.rs  events.rs  locks.rs  mod.rs  session.rs  support.rs  test_support.rs
simgitd/src/session/: db.rs  manager.rs  mod.rs
simgitd/src/vfs/: cow_backend.rs  fuse_backend.rs  git_resolver.rs  mod.rs  nfs_backend.rs  session_ops.rs
simgitd/src/vfs/fskit/: fskit-bridge-protocol.md
simgitd/src/vfs/fskit/Bridge/: FSKitPlugin.swift
simgitd/src/vfs/fuse_backend/: bytes.rs  filesystem_impl.rs  linux_integration_tests.rs  mod.rs  session_fs.rs  tree.rs
simgitd/src/vfs/winfsp_backend/: adapter.rs  mod.rs
spike/fuse_passthrough/: Cargo.toml
spike/fuse_passthrough/src/: main.rs
spike/git_reader/: Cargo.toml
spike/git_reader/src/: main.rs
spike/overlay_test/: Cargo.toml
spike/overlay_test/src/: main.rs
tests/: bench_scaling.sh  bench_worktree_io.py  borrow_checker_tests.rs  nightly-slo-gate.sh  overlay_integration.sh  real_agent_compare.py  real_agent_harness.py
tests/stress/: agent_harness.py  drunk_agent.py  fault_injector.py  soak_runner.py  swarm_runner.py
