[workspace]
resolver = "2"
members = [
    "simgitd",
    "sg",
    "simgit-sdk",
    "simgit-py",
    "spike/fuse_passthrough",
    "spike/git_reader",
    "spike/overlay_test",
]

[workspace.package]
version      = "0.1.0"
edition      = "2021"
license      = "MIT"
authors      = ["simgit contributors"]
repository   = "https://github.com/simgit/simgit"

[workspace.dependencies]
# async runtime
tokio        = { version = "1", features = ["full"] }

# FUSE (Linux)
fuser        = "0.17"

# Git
gix          = { version = "0.81", features = ["blob-diff", "revision", "index", "merge"] }

# SQLite
rusqlite     = { version = "0.32", features = ["bundled", "wasm32-wasi-vfs"] }

# Serialization
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"

# CLI
clap         = { version = "4", features = ["derive", "env"] }

# Hashing
sha2         = "0.10"

# LRU cache
lru          = "0.12"

# UUIDs
uuid         = { version = "1", features = ["v7", "serde"] }

# Time
chrono       = { version = "0.4", features = ["serde"] }

# Logging / tracing
tracing             = "0.1"
tracing-subscriber  = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow       = "1"
thiserror    = "1"

# Async trait support
async-trait  = "0.1"

# C bindings (uid/gid for FUSE attrs, socket permissions)
libc         = "0.2"

# Internal workspace crates
simgit-sdk   = { path = "simgit-sdk" }
