[workspace]
resolver = "2"
members = [
    "sg",
]

[workspace.package]
version      = "0.1.1"
edition      = "2021"
license      = "MIT"
authors      = ["simgit contributors"]
repository   = "https://github.com/abendrothj/simgit"

[workspace.dependencies]
# Serialization
serde_json   = "1"

# CLI
clap         = { version = "4", features = ["derive", "env"] }

# UUIDs
uuid         = { version = "1", features = ["v4", "v7"] }

# Error handling
anyhow       = "1"
