[package]
name        = "sg"
description = "simgit CLI — session management and borrow status"
version.workspace     = true
edition.workspace     = true
license.workspace     = true

[[bin]]
name = "sg"
path = "src/main.rs"

[dependencies]
clap.workspace        = true
tokio.workspace       = true
serde.workspace       = true
serde_json.workspace  = true
anyhow.workspace      = true
tracing.workspace     = true
tracing-subscriber.workspace = true
uuid.workspace        = true
chrono.workspace      = true
simgit-sdk.workspace  = true
