[package]
name        = "simgit-cli"
description = "simgit CLI — native copy-on-write Git worktrees"
version.workspace     = true
edition.workspace     = true
license.workspace     = true

[[bin]]
name = "sg"
path = "src/main.rs"

[dependencies]
clap.workspace        = true
serde_json.workspace  = true
anyhow.workspace      = true
uuid.workspace        = true
