[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "simgit"
version = "0.1.0"
description = "Python bindings for simgit session management"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "simgit contributors" }
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Rust",
  "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/simgit/simgit"
Repository = "https://github.com/simgit/simgit"

[tool.maturin]
bindings = "pyo3"
module-name = "simgit.simgit"
python-source = "."
strip = true