[package]
name        = "simgitd"
description = "simgit daemon — VFS router, borrow checker, session manager"
version.workspace     = true
edition.workspace     = true
license.workspace     = true

[[bin]]
name = "simgitd"
path = "src/main.rs"

[dependencies]
tokio.workspace       = true
fuser.workspace       = true
gix.workspace         = true
rusqlite.workspace    = true
serde.workspace       = true
serde_json.workspace  = true
sha2.workspace        = true
lru.workspace         = true
uuid.workspace        = true
chrono.workspace      = true
tracing.workspace     = true
tracing-subscriber.workspace = true
anyhow.workspace      = true
thiserror.workspace   = true
simgit-sdk.workspace  = true
async-trait.workspace = true
libc.workspace        = true
prometheus            = "0.13"
axum                  = "0.7"
opentelemetry         = "0.27"
opentelemetry_sdk     = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp    = { version = "0.27", features = ["grpc-tonic", "trace"] }
tracing-opentelemetry = "0.28"

# NFS-loopback support (macOS primary, optional on Linux)
[target.'cfg(target_os = "macos")'.dependencies]
onc-rpc   = "0.3"
xdr-codec = "0.4"
