[package]
name        = "simgitd"
description = "simgit daemon — VFS router, borrow checker, session manager"
version.workspace     = true
edition.workspace     = true
license.workspace     = true

[[bin]]
name = "simgitd"
path = "src/main.rs"

[dependencies]
tokio.workspace       = true
fuser.workspace       = true
gix.workspace         = true
rusqlite.workspace    = true
serde.workspace       = true
serde_json.workspace  = true
sha2.workspace        = true
lru.workspace         = true
uuid.workspace        = true
chrono.workspace      = true
tracing.workspace     = true
tracing-subscriber.workspace = true
anyhow.workspace      = true
thiserror.workspace   = true
simgit-sdk.workspace  = true
async-trait.workspace = true
libc.workspace        = true
prometheus            = "0.13"
axum                  = "0.7"
opentelemetry         = "0.27"
opentelemetry_sdk     = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp    = { version = "0.27", features = ["grpc-tonic", "trace"] }
tracing-opentelemetry = "0.28"
nfsserve              = "0.11"

[target.'cfg(windows)'.dependencies]
winfsp_wrs = "0.4"

[dev-dependencies]
walkdir = "2"
